Enable multithreaded rendering
Display licence notice on -v command line parameter being passed

Rename project

--- a/Documentation/DeveloperDocs/DeveloperManual.html
+++ b/Documentation/DeveloperDocs/DeveloperManual.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>GameFramework developer documentation</title>
+    <title>TaleScripter developer documentation</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
@@ -12,7 +12,7 @@
       <div class="header-separator"></div>
 
       <div class="manual-header">
-        <h1>GameFramework developer manual</h1>
+        <h1>TaleScripter developer manual</h1>
       </div>
     </div>
 
@@ -71,16 +71,16 @@
           <a name="content-introduction"></a>
           <h3>Introduction</h3>
           <p>
-            GameFramework is a Visual Novel game engine written in C++ which is built around using a database to structure content.
+            TaleScripter is a Visual Novel game engine written in C++ which is built around using a database to structure content.
           </p>
 
           <p>
-            GameFramework is currently in a very early stage of development and is currently not yet suitable for general use.
+            TaleScripter is currently in a very early stage of development and is currently not yet suitable for general use.
           </p>
 
           <p>
             The actual game engine/runner is currently being worked on, however there is currently not a functional development environment
-            for actually developing games using GameFramework. This is planned for the future, but currently the game must be manually built
+            for actually developing games using TaleScripter. This is planned for the future, but currently the game must be manually built
             by inserting data into the Novel and Resource databases using SQL. This will not be the case once the engine has developed enough
             such that developing a full game will be possible.
           </p>
@@ -114,7 +114,7 @@
           </div>
 
           <div class="content-body-text">
-            <p>As GameFramework is written in C++, some environment setup is required to be able to compile it successfully.</p>
+            <p>As TaleScripter is written in C++, some environment setup is required to be able to compile it successfully.</p>
           </div>
 
           <div class="content-body-text">
